--- a/config.properties
+++ b/config.properties
@@ -2,7 +2,8 @@ jdbc.url=jdbc:mysql://127.0.0.1:3306/lyscharlie?characterEncoding=utf8
 jdbc.username=lyscharlie
 jdbc.password=2110857
 
-loggingRoot=d:/logs/lyscharlie
+#loggingRoot=d:/logs/lyscharlie
+loggingRoot=/Users/liyishi/Work/logs/lyscharlie
 loggingLevel=debug
 
 timeTask.test.cronExpression=*/30 * * * * ?
