--- a/config.properties
+++ b/config.properties
@@ -7,3 +7,5 @@ loggingRoot=/Users/liyishi/Work/logs/lyscharlie
 loggingLevel=debug
 
 timeTask.test.cronExpression=*/30 * * * * ?
+
+data.value=12345678
