--- a/config.properties
+++ b/config.properties
@@ -6,6 +6,7 @@ jdbc.password=2110857
 loggingRoot=/Users/liyishi/Work/logs/lyscharlie
 loggingLevel=debug
 
-timeTask.test.cronExpression=*/30 * * * * ?
+timeTask.test1.cronExpression=*/30 * * * * ?
+timeTask.test2.cronExpression=*/24 * * * * ?
 
 data.value=12345678
