--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,6 +5,7 @@ jdbc.password=${jdbc.password}
 loggingRoot=${loggingRoot}
 loggingLevel=${loggingLevel}
 
-timeTask.test.cronExpression=${timeTask.test.cronExpression}
+timeTask.test1.cronExpression=${timeTask.test1.cronExpression}
+timeTask.test2.cronExpression=${timeTask.test2.cronExpression}
 
 data.value=${data.value}
